[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialdata-plot-notebooks"
version = "0.0.0"
description = "Executable notebooks demonstrating spatialdata-plot on real spatial-omics datasets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "scverse" }]

# The package itself ships no Python code; this is a pyproject for tooling +
# environment management. The `exec` extra installs everything needed to run
# the notebooks end-to-end.
[project.optional-dependencies]
exec = [
    "spatialdata-plot>=0.3.4",
    "squidpy",
    "jupyter",
    "ipykernel",
    "watermark",
]
dev = [
    "pre-commit>=3.0",
    "ruff",
    "nbstripout",
]

[project.urls]
Source = "https://github.com/scverse/spatialdata-plot-notebooks"
Documentation = "https://spatialdata.scverse.org/projects/plot/en/latest/"

[tool.hatch.build.targets.wheel]
bypass-selection = true

# Pixi-managed environment for running and authoring the notebooks. After
# `pixi install`, register the Jupyter kernel once with `pixi run
# kernel-install`; the kernel will point at the pixi env's Python, so
# `pixi run lab` (or any external Jupyter) can execute the notebooks
# against the exact pinned dependencies.
[tool.pixi]
workspace.channels = ["conda-forge"]
workspace.platforms = ["linux-64", "osx-arm64"]

dependencies.python = ">=3.11"
dependencies.jupyterlab = "*"
dependencies.ipykernel = "*"
dependencies.nbconvert = "*"
dependencies.watermark = "*"

pypi-dependencies.spatialdata-plot = ">=0.3"
pypi-dependencies.squidpy = "*"

tasks.kernel-install = 'python -m ipykernel install --user --name sdata-plot-notebooks --display-name "sdata-plot-notebooks"'
tasks.lab = "jupyter lab"
tasks.execute = "jupyter nbconvert --to notebook --execute --inplace tutorials/*.ipynb examples/*.ipynb"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Notebooks have different idioms than production code (bare expressions to
# render values, repeated assignment to inspect state). Skip bugbear (B*) and
# enforce only the rules that catch real defects.
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # long lines fine in notebooks

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]  # imports after markdown intro cells are common

# nbqa runs ruff against a converted .py file, so per-file-ignores keyed on
# *.ipynb don't match. Pass notebook-specific overrides through here instead.
[tool.nbqa.addopts]
ruff = ["--extend-ignore=E402"]
